--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -61,18 +61,35 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #fff;
-$background-color           : #fff;
-$code-background-color      : #fafafa;
-$code-background-color-dark : $light-gray;
-$text-color                 : $dark-gray;
-$border-color               : $lighter-gray;
+$body-color                 : #333333;
+$background-color           : #333333;
+$text-color                 : #ffffff;
+$primary-color              : #d3d3d3;
+$border-color               : mix(#fff, $background-color, 20%);
+$code-background-color      : mix(#000, $background-color, 15%);
+$code-background-color-dark : mix(#000, $background-color, 20%);
+$form-background-color      : mix(#000, $background-color, 15%);
+$footer-background-color    : $gray;
+$link-color                 : $primary-color;
+$link-color-hover           : mix(#000, $link-color, 25%);
+$link-color-visited         : mix(#fff, $link-color, 25%);
+$masthead-background-color  : mix(#000, $background-color, 20%);
+$masthead-link-color        : $text-color;
+$masthead-link-color-hover  : mix(#fff, $text-color, 20%);
+$navicon-link-color-hover   : mix(#fff, $background-color, 30%);
+
+// $body-color                 : #fff;
+// $background-color           : #fff;
+// $code-background-color      : #fafafa;
+// $code-background-color-dark : $light-gray;
+// $text-color                 : $dark-gray;
+// $border-color               : $lighter-gray;
 
 $primary-color              : #7a8288;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #2f7f93;
+$info-color                 : #565ef4;
 
 /* brands */
 $behance-color              : #1769FF;
