Set right padding for _archive.scss list view to standard width

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -98,9 +98,9 @@
     padding-right: $right-sidebar-width;
   }
 
-  @include breakpoint($x-large) {
-    padding-right: $right-sidebar-width-wide;
-  }
+  // @include breakpoint($x-large) {
+  //   padding-right: $right-sidebar-width-wide;
+  // }
 
   .page__meta {
     margin: 0 0 4px;
