--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -190,7 +190,7 @@
   list-style-type: none;
   border: 1px solid $border-color;
   border-radius: $border-radius;
-  background: #fff;
+  background: mix(#fff, $background-color, 10%);
   z-index: -1;
   box-shadow: 0 0 10px rgba(#000, 0.25);
   cursor: default;
@@ -231,7 +231,7 @@
     width: 0;
     border-style: solid;
     border-width: 0 10px 10px;
-    border-color: #fff transparent;
+    border-color: mix(#fff, $background-color, 10%) transparent;
     z-index: 1;
 
     @include breakpoint($large) {
